--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.19.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
@@ -21,6 +21,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "swiper": "^9.3.2",
     "tailwind-merge": "^3.3.1"
   },
