--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@stripe/stripe-js": "^7.4.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "stripe": "^18.2.1",
     "swiper": "^9.3.2",
     "tailwind-merge": "^3.3.1"
   },
