--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "lucide-react": "^0.525.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
+    "posthog-js": "^1.260.1",
+    "posthog-node": "^5.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
