--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
-    "posthog-js": "^1.260.1",
+    "posthog-js": "1.266.3",
     "posthog-node": "^5.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
